cabal-version:      2.4
name:               Scheme
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:
    A Scheme parser (and soon compiler),
    from the book "Write Yourself a Scheme in 48 Hours"

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:         MIT
author:             sandalbanditten
maintainer:         sandalbanditten@tutanota.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Scheme
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        parsec
    hs-source-dirs:   app
    default-language: Haskell2010
